[package]
name = "h3x"
description = "High-performance zero-copy DHTTP/3 implementation"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/genmeta/h3x"
license = "Apache-2.0"
keywords = ["async", "quic", "http3"]
categories = ["network-programming", "asynchronous"]

[dependencies]
bytes = "1"
bon = "3"
dashmap = "6"
futures = "0.3"
http = "1"
httlib-huffman = "0.3"
pin-project-lite = "0.2"
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["logging"] }
snafu = "0.8"
tokio = "1"
tokio-util = { version = "0.7", features = ["codec", "io"] }
tracing = "0.1"
matchit = "0.9"
x509-parser = "0.18"

gm-quic = { version = "0.4.0", optional = true }

tower-service = { version = "0.3", optional = true }
http-body = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }

[features]
default = ['gm-quic', 'tower']
gm-quic = ['dep:gm-quic']
tower = ['dep:http-body', 'dep:http-body-util', 'dep:tower-service']

[dev-dependencies]
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
] }
snafu = "0.8"
tokio = { version = "1", features = ["macros", "test-util", "io-util"] }
tracing-subscriber = "0.3"
