[package]
name = "h3x"
description = "High-performance zero-copy DHTTP/3 implementation"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/genmeta/h3x"
license = "Apache-2.0"
keywords = ["async", "quic", "http3"]
categories = ["network-programming", "asynchronous"]

[dependencies]
bon = "3"
bytes = "1"
dashmap = "6"
futures = "0.3"
http = "1"
httlib-huffman = "0.3"
pin-project-lite = "0.2"
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["logging"] }
snafu = "0.8"
tokio = "1"
tokio-util = { version = "0.7", features = ["codec", "io"] }
tracing = "0.1"
matchit = "0.9"
x509-parser = "0.18"
tower-service = "0.3"

gm-quic = { git = "https://github.com/genmeta/gm-quic.git", branch = "main", optional = true }
# gm-quic = { path = "../gm-quic/gm-quic", optional = true }

http-body = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }

[features]
default = ['gm-quic', 'http-body']
gm-quic = ['dep:gm-quic']
http-body = ['dep:http-body', 'dep:http-body-util']

[dev-dependencies]
axum = { version = "0.8", default-features = false, features = [
    'form', # (default)
    # 'http1',    # (default)
    'json',         # (default)
    'matched-path', # (default)
    'original-uri', # (default)
    'query',        # (default)
    'tokio',        # (default)
    'tower-log',    # (default)
    'tracing',      # (default)
    'macros',       # for debug_handler
] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
] }
snafu = "0.8"
tokio = { version = "1", features = [
    "macros",
    "test-util",
    "io-util",
    "rt-multi-thread",
] }
tracing-appender = "0.2"
tracing-subscriber = "0.3"
