[package]
name = "h3x"
description = "High-performance zero-copy DHTTP/3 implementation"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/genmeta/h3x"
license = "Apache-2.0"
keywords = ["async", "quic", "http3"]
categories = ["network-programming", "asynchronous"]

[dependencies]
bon = "3"
bytes = "1"
dashmap = "6"
futures = "0.3"
http = "1"
httlib-huffman = "0.3"
pin-project-lite = "0.2"
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "std",
] }
snafu = "0.9"
tokio = { version = "1", features = ["rt", "macros", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["codec", "io", "rt"] }
tracing = "0.1"
matchit = "0.9"
x509-parser = "0.18"
tower-service = "0.3"

# feature dquic
dquic = { git = "ssh://git@github.com/genmeta/dquic.git", branch = "feat/v0.5", optional = true }

# feature hyper
http-body = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1", features = ["http2"], optional = true }

# feature serde
serde = { version = "1", features = ["derive"], optional = true }

# feature rpc (implemented with remoc crate)
# NOTE: no codec feature here — downstream chooses the codec
remoc = { version = "0.18", default-features = false, optional = true, features = [
    "remoc_macro",
    "rtc",
    "serde",
] }

# feature pipe
nix = { version = "0.29", default-features = false, optional = true, features = [
    "socket",
    "uio",
] }
smallvec = { version = "1", optional = true }


[features]
default = ["dquic", "hyper"]
dquic = ["dep:dquic"]
hyper = ["dep:http-body", "dep:http-body-util", "dep:hyper"]
serde = ["dep:serde"]
rpc = ["dep:remoc", "serde", "bytes/serde"]
ipc = ["rpc", "dep:nix", "dep:smallvec", "tokio/net"]
webtransport = []
testing = []

[dev-dependencies]
axum = { version = "0.8", default-features = false, features = [
    "form", # (default)
    # "http1",    # (default)
    "json",         # (default)
    "matched-path", # (default)
    "original-uri", # (default)
    "query",        # (default)
    "tokio",        # (default)
    "tower-log",    # (default)
    "tracing",      # (default)
    "macros",       # for debug_handler
] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
] }
tokio = { version = "1", features = [
    "macros",
    "test-util",
    "io-util",
    "rt-multi-thread",
] }
tracing-appender = "0.2"
tracing-subscriber = "0.3"
proptest = "1"
remoc = { version = "0.18", features = ["default-codec-postbag"] }
