[package]
name = "h3x-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tokio = { version = "1", features = ["rt", "io-util"] }
bytes = "1"
futures = "0.3"

[dependencies.h3x]
path = ".."

[[bin]]
name = "fuzz_varint"
path = "fuzz_targets/fuzz_varint.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_qpack_integer"
path = "fuzz_targets/fuzz_qpack_integer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_qpack_string"
path = "fuzz_targets/fuzz_qpack_string.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_qpack_field"
path = "fuzz_targets/fuzz_qpack_field.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_qpack_instruction"
path = "fuzz_targets/fuzz_qpack_instruction.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_dhttp_setting"
path = "fuzz_targets/fuzz_dhttp_setting.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_frame"
path = "fuzz_targets/fuzz_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_unidirectional_stream"
path = "fuzz_targets/fuzz_unidirectional_stream.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_dhttp_settings"
path = "fuzz_targets/fuzz_dhttp_settings.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_goaway"
path = "fuzz_targets/fuzz_goaway.rs"
test = false
doc = false
bench = false
